--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <canvas id='c'></canvas>
 <div class="controls">
 <div class="controls_title"><strong>CONTROLS</strong></div>
-<div class="items">color<input id="color" type="color" name="" value="#4dc4a8"></div>
+<div class="items">Color<input id="color" type="color" name="" value="#4dc4a8"></div>
 <!-- <label for="color">shape</label>
 <input id="shape" type="button" name="" value="shape"> -->
-<div class="items">background color<input id="bgcolor" type="color" name="" value="#ffffff"></div>
-<div class="items">size<input id="size" type="range" name="" value="40"></div>
+<div class="items">Background color<input id="bgcolor" type="color" name="" value="#ffffff"></div>
+<div class="items">Size<input id="size" type="range" name="" value="40"></div>
 <div id="save">Download your maze</div>
 </div>
 </div>
